kubectl/static.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: static-production
  name: static-production
spec:
  replicas: 1
  selector:
    matchLabels:
      run: static-production
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: static-production
    spec:
      containers:
      - name: static-production
        image: gcr.io/scale-innovations/scale/static-production:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: static-production
  name: static-production
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    run: static-production
  type: NodePort
